@@ -70,9 +70,12 @@ public class CodeCompletionPreferencesController
       _panel.txtMaxLastSelectedCompletionNames.setText("" + _prefs.getMaxLastSelectedCompletionNames());
 
       _panel.chkShowRemarksInColumnCompletion.setSelected(_prefs.isShowRemarksInColumnCompletion());
+
       _panel.chkMatchCamelCase.setSelected(_prefs.isMatchCamelCase());
 
       _panel.chkIncludeUDTs.setSelected(_prefs.isIncludeUDTs());
+
+		_panel.chkSortColumnsAlphabetically.setSelected(_prefs.isSortColumnsAlphabetically());
 
 
       _panel.btnNewRow.addActionListener(new ActionListener()
@@ -173,9 +176,12 @@ public class CodeCompletionPreferencesController
       }
 
       _prefs.setShowRemarksInColumnCompletion(_panel.chkShowRemarksInColumnCompletion.isSelected());
+
       _prefs.setMatchCamelCase(_panel.chkMatchCamelCase.isSelected());
 
       _prefs.setIncludeUDTs(_panel.chkIncludeUDTs.isSelected());
+
+      _prefs.setSortColumnsAlphabetically(_panel.chkSortColumnsAlphabetically.isSelected());
 
    }
 
