@@ -39,4 +39,7 @@ CodeCompletionPreferencesPanel.showRemarksInColumnCompletionChk=Show remarks in 
 
 CodeCompletionPreferencesPanel.matchCamelCase=Match completions CamelCase wise
 
-CodeCompletionPreferencesPanel.includeUDTs=Support completion of User Defined Types (UDT) 
+CodeCompletionPreferencesPanel.includeUDTs=Support completion of User Defined Types (UDT)
+CodeCompletionPreferencesPanel.SortColumnsAlphabetically=Sort columns alphabetically in completion popup
+
+
